fix( dashboard | shared ): extract repeatable logic from Dashboard and AssetDetails page to seperate components and correct z-index issue with asset details dialog
This commit refactors the Dashboard and AssetDetails pages by extracting
repeatable logic into separate components. This improves code reusability
and maintainability. Additionally, it addresses a z-index issue with the
asset details dialog, ensuring that it displays correctly above other
elements on the page.

--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 @layer utilities {
     .skeleton {
         animation: skeleton-loading 1.5s infinite;
-        background: linear-gradient(90deg, #f0f0f0, #e0e0e0, #f0f0f0);
+        background: linear-gradient(90deg, #cacaca, #e0e0e0, #cacaca);
         background-size: 400% 100%;
     }
-    .dark .skeleton {
-        background: linear-gradient(90deg, #2a2a2a, #1a1a1a, #2a2a2a);
+    .route-dark .skeleton {
+        background: linear-gradient(90deg, #363636, #1a1a1a, #363636);
         background-size: 400% 100%;
     }
 
